# synapse

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
synapse/: __init__.py  docker_manager.py  lexer.py  main.py  state.py
synapse/agents/: __init__.py  architect.py  base.py  coder.py  debugger.py  summariser.py
synapse/config/: __init__.py  loader.py
synapse/config/defaults/: agents.yaml  cli_config.yaml  pipeline.yaml
synapse/graphs/: __init__.py  autonomous_stack.py  balanced_stack.py  fast_stack.py
synapse/memory/: __init__.py  vector_store.py
synapse/tests/: __init__.py  test_part1.py  test_part2.py  test_part3.py  test_part4.py  test_part5.py
synapse/tools/: __init__.py  mcp_client.py  native.py  registry.py
synapse/ui/: __init__.py  terminal.py
